<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/teamHeader"
                android:text="@string/team_a"
                android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/score"
                    android:text="@string/initial_score"
                    android:fontFamily="sans-serif-light"/>

                <TextView
                    android:id="@+id/team_a_overs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/overs"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/initial_overs"/>

            <Button
                android:id="@+id/team_a_dot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/standardButton"
                android:text="@string/dot_ball"
                android:onClick="addDot"/>

            <Button
                android:id="@+id/team_a_one_run"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus_one_run"
                style="@style/standardButton"
                android:onClick="addOne"/>

            <Button
                android:id="@+id/team_a_two_runs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus_two_runs"
                style="@style/standardButton"
                android:onClick="addTwo"/>

            <Button
                android:id="@+id/team_a_three_runs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus_three_runs"
                style="@style/standardButton"
                android:onClick="addThree"/>

            <Button
                android:id="@+id/team_a_four_runs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus_four_runs"
                style="@style/standardButton"
                android:onClick="addFour"/>

            <Button
                android:id="@+id/team_a_six_runs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus_six_runs"
                style="@style/standardButton"
                android:onClick="addSix"/>

            <Button
                android:id="@+id/team_a_wicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wicket"
                style="@style/lastButton"
                android:onClick="addWicket"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/teamHeader"
                android:text="@string/team_b"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/score"
                android:text="@string/initial_score"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/team_b_overs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/overs"
                android:fontFamily="sans-serif-medium"
                android:text="@string/initial_overs"/>

            <Button
                android:id="@+id/team_b_dot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dot_ball"
                style="@style/standardButton"
                android:onClick="addDot"/>

            <Button
                android:id="@+id/team_b_one_run"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus_one_run"
                style="@style/standardButton"
                android:onClick="addOne"/>

            <Button
                android:id="@+id/team_b_two_runs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus_two_runs"
                style="@style/standardButton"
                android:onClick="addTwo"/>

            <Button
                android:id="@+id/team_b_three_runs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus_three_runs"
                style="@style/standardButton"
                android:onClick="addThree"/>

            <Button
                android:id="@+id/team_b_four_runs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus_four_runs"
                style="@style/standardButton"
                android:onClick="addFour"/>

            <Button
                android:id="@+id/team_b_six_runs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus_six_runs"
                style="@style/standardButton"
                android:onClick="addSix"/>

            <Button
                android:id="@+id/team_b_wicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wicket"
                style="@style/lastButton"
                android:onClick="addWicket"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true"
        android:layout_marginLeft="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="32dp"
        android:text="@string/reset"
        android:onClick="reset" />

</RelativeLayout>